syntax = "proto3";

package gedorinku.tsugidoko_server;

option go_package = "github.com/gedorinku/tsugidoko-server/api;api_pb";


import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service SessionService {
  rpc CreateSession (CreateSessionRequest) returns (Session) {
    option (google.api.http) = {
      post: "/sessions"
      body: "*"
    };
  }
  rpc DeleteSession (DeleteSessionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/sessions"
    };
  }
}

message Session {
  string session_id = 1;
  uint32 uesr_id = 2;
}

message CreateSessionRequest {
  string name = 1;
  string password = 2;
}

message DeleteSessionRequest {
}
